kubernetes-manifests/guestbook-go/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: guestbook-go
  labels:
    app: guestbook-go
    demo: roadshow
    repo: demo-apps
