kubernetes-manifests/guestbook-go/deployment-guestbook-go.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-go
  namespace: guestbook-go
  labels:
    app: guestbook-go
    demo: roadshow
    repo: demo-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guestbook-go
  template:
    metadata:
      labels:
        app: guestbook-go
        demo: roadshow
        repo: demo-apps
    spec:
      containers:
        - name: guestbook-go
          image: quay.io/mfoster/guestbook-go:0.1.0
          ports:
            - containerPort: 3000
              name: http
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
            requests:
              memory: "64Mi"
              cpu: "50m"
