kubernetes-manifests/guestbook-go/service-guestbook-go.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-go
  namespace: guestbook-go
  labels:
    app: guestbook-go
    demo: roadshow
    repo: demo-apps
spec:
  selector:
    app: guestbook-go
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: http
  type: ClusterIP
