kubernetes-manifests/guestbook-go/route-guestbook-go.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: guestbook-go
  namespace: guestbook-go
  labels:
    app: guestbook-go
    demo: roadshow
    repo: demo-apps
spec:
  to:
    kind: Service
    name: guestbook-go
  port:
    targetPort: 3000
  tls:
    termination: edge
